--- a/.github/workflows/autopullissue.yml
+++ b/.github/workflows/autopullissue.yml
@@ -2,8 +2,8 @@ name: pull_issue_from_github
 
 on:
   # Run automatically every 6 hours
-  schedule:
-    - cron: "0 */6 * * *"
+  #schedule:
+  #  - cron: "0 */6 * * *"
 
   # Allows manually running the job at any time
   workflow_dispatch:
