--- a/.github/workflows/autopullissue.yml
+++ b/.github/workflows/autopullissue.yml
@@ -1,8 +1,8 @@
 name: pull_issue_from_github
 
 on:
-  #schedule:
-  #  - cron: "0 */6 * * *"
+  schedule:
+    - cron: "0 */6 * * *"
   workflow_dispatch:
 
 jobs:
